# storia-real-estate-pipeline-gcp

./: LICENSE  README.md  main.py  pyproject.toml
src/ingestion/: geo_scraper.py  scraper.py
