[project]
name = "storia-real-estate-pipeline-gcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "google-cloud-storage>=3.10.0",
    "h2>=4.3.0",
    "httpx>=0.28.1",
    "lxml>=6.0.2",
]
